# musical-perception

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml
docs/: ROADMAP-v2.md  ROADMAP.md
docs/adr/: 001-upgrade-audio-perception.md  002-gemini-integration.md  003-typed-quality-model.md  004-quality-model-redesign.md  005-remove-scaffolding.md  006-onset-tempo-and-normalization.md  007-coherent-metric-interpretation.md  008-analysis-trigger-pipeline.md
scripts/: compare_extra.py  compare_models.py  experiment_approaches.py  try_gemini.py  try_gemini_compare.py  try_gemini_structured.py
src/musical_perception/: __init__.py  __main__.py  analyze.py  trigger.py  types.py
src/musical_perception/perception/: gemini.py  pose.py  prosody.py  wakeword.py  whisper.py  whistress.py
src/musical_perception/precision/: __init__.py  dynamics.py  rhythm.py  signature.py  subdivision.py  tempo.py
src/musical_perception/scaffolding/: __init__.py  exercise.py  markers.py
tests/: test_dynamics.py  test_exercise.py  test_gemini_merge.py  test_markers.py  test_rhythm.py  test_subdivision.py  test_tempo.py  test_trigger.py  test_wakeword.py
