[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musical-perception"
version = "0.1.0"
description = "Extract structured musical parameters from audio — tempo, subdivision, exercise type, counting signature"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
whisper = [
    "whisperx>=3.1",
]
whisper-fallback = [
    "openai-whisper>=20231117",
]
prosody = [
    "librosa>=0.10",
    "praat-parselmouth>=0.4",
    "soundfile>=0.12",
]
gemini = [
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]
pose = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
]
trigger = [
    "openwakeword>=0.6",
]
all = [
    "musical-perception[whisper,prosody,gemini,pose,trigger]",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
